# strava-history-analysis

./: .gitignore  CLAUDE.md  LICENSE  README.md  database.py  debugging_log.md  main.py  pyproject.toml  stravalib_wrapper.py  time_series_functions.py  time_series_parser.py
.claude/: settings.local.json
notebooks/: Historical Normalized Power.md  cumulative_bike_distance.py  database_initializing_test.ipynb  fit_file_parsing.ipynb  historical_normalized_power.html  historical_normalized_power.py  hr_experimentation.py  json_file_parsing.ipynb  pacing_calc_experiments.html  pacing_calc_experiments.md  pacing_calc_experiments.py  time_series_functions_experiments.ipynb
strava_history_analysis/: __init__.py  database.py  hyperparameter_fit.py  pacing_calculator.py  time_series_functions.py
